@@ -28,8 +28,8 @@ agents(){
     cout<<"Building agents...";
     agentFactory& F=agentFactorySelector::select(parameters::getInstance().agentFactoryType);
     F.createAgents(ags);
-
-    ags[10000]->infectWith("covid");
+    shuffle (ags.begin(), ags.end(), std::default_random_engine(parameters::getInstance().randomSeed));
+    for (unsigned i=0;i<10;i++)ags[10000+i]->infectWith("covid");
 
     for (auto a:ags)a->addProcess(new movement(a));
 }
